--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Himakar",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.13"
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.14"
   }
 }
